@@ -1,21 +1,43 @@
+* Replace the LPRDoc interface (based on gnome-print) with a GTK based
+  print routine. This would remove one of the last gnome-specific 
+  libraries, and make portability better. Even more important, the 
+  gnome-print interface has been deprecated by the GNOME project, so it
+  will not be around forever. We need to adapt to the new GTK method.
+
+* Add support for formatted notes. We have a start by ripping off code
+  from GPL code from grecipe-manager.
+
 * Allow for multiple notes. A tabbed interface would be really useful,
-  since there are no titles for notes. Not all objects would necessarily
-  need multiple notes. Determine which ones should and shouldn't.
-* Date calculator.
-  See http://sourceforge.net/mailarchive/forum.php?thread_id=3252078&forum_id=1993
+  since there are no titles for notes. Not all objects would
+  necessarily need multiple notes. Determine which ones should and
+  shouldn't.
+
+* Adapt the kiwi-entry widget from the Kiwi project so that GRAMPS can
+  use it.  It looks like it can be broken out from the core of the
+  Kiwi project. This would give us filtered input, icons in the entry,
+  and shading of the box. All of which would be good to help restrict
+  input to valid input.
+
+* Date calculator.  See
+  http://sourceforge.net/mailarchive/forum.php?thread_id=3252078&forum_id=1993
+
 * Add string substitutions for web page generation (name, report name,
   date, etc).
+
 * Add support for sources of the parent/child relation
-* Add support for storing reliability (confidence) of the marriage information; 
-  see http://sourceforge.net/mailarchive/forum.php?thread_id=3066997&forum_id=1993 
-  and http://sourceforge.net/mailarchive/forum.php?thread_id=3134931&forum_id=1993
+
+* Add support for storing reliability (confidence) of the marriage
+  information; see
+  http://sourceforge.net/mailarchive/forum.php?thread_id=3066997&forum_id=1993
+  and
+  http://sourceforge.net/mailarchive/forum.php?thread_id=3134931&forum_id=1993
   for the details.
-* Add autofill feature for City, Church parish, County, State and Country? 
+
 * Move LDS temple info out of const.py and into an XML file
-* Enhanced web page generator
-* Make the descendant graph adapt to the page size, not stuck with the current
-  3 entries per page.
+
+* Make the descendant graph adapt to the page size, not stuck with the
+  current 3 entries per page.
+
 * Add slideshow generation ability to web page generator
-* Add parameter definition of Filter Rules to the filter itself, so it can be
-  removed from the filter editor and used by PeopleView.
+
 * And a whole lot more....
